--- a/assignment_03.Rmd
+++ b/assignment_03.Rmd
@@ -7,23 +7,23 @@ editor_options:
   chunk_output_type: console
 ---
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, warning = TRUE)
 knitr::opts_chunk$set(message = FALSE)
 ```
 
 
-```{r load-packages, message = FALSE}
+```{r load-packages, message=TRUE, warning=TRUE, paged.print=TRUE}
 library(tidyverse)
 library(haven)
 ```
 
-```{r import data, message = FALSE}
-import <- read_stata("us_import.dta")
+```{r import data, echo=FALSE, message=TRUE, warning=TRUE}
+trade <- read_stata("us_trade_data.dta")
 ```
 
-```{r summarize data}
-import %>%
-  group_by(year) %>%
-  summarize(tot_imp = mean(tot_imp)) 
+```{r summarize data, echo=FALSE, message=TRUE, warning=TRUE, paged.print=TRUE}
+trade %>%
+  group_by(year,trade_type) %>%
+  summarize(tot_imp = mean(trade_value)) 
 ```
 
