--- a/assignment_03_revised.Rmd
+++ b/assignment_03_revised.Rmd
@@ -35,10 +35,13 @@ head(trade_2,10)
 ```
 
 ```{r bar graph}
-ggplot(data=trade_2, aes(x=year, y=Export)) +
+ggplot(data=trade_1, aes(x=year, y=trade_value)) +
   geom_bar(stat="identity", fill="steelblue")+
   theme_minimal()
 ```
 
-
-
+```{r bar graph}
+ggplot(data = trade_2, aes(year)) + 
+  geom_line(aes(y = Export, colour = "blue")) + 
+  geom_line(aes(y = Import, colour = "read"))
+```
