--- a/assignment_03_revised.Rmd
+++ b/assignment_03_revised.Rmd
@@ -30,18 +30,21 @@ head(trade_1,10)
 ```
 ```{r reshape data}
 trade_2 <- trade_1 %>%
-    pivot_wider(id_cols = year, names_from = trade_type, values_from = trade_value)
-head(trade_2,10)
-```
+    pivot_wider(id_cols = year, names_from = trade_type, values_from = trade_value) 
 
-```{r bar graph1}
-ggplot(data=trade_1, aes(x=year, y=trade_value)) +
-  geom_bar(stat="identity", fill="steelblue")+
-  theme_minimal()
+trade_2$Net_Import = trade_2$Import-trade_2$Export
+
+head(trade_2,10)
 ```
 
 ```{r line graph}
 ggplot(data = trade_2, aes(year)) + 
   geom_line(aes(y = Export, colour = "blue")) + 
   geom_line(aes(y = Import, colour = "read"))
+```
+
+```{r bar graph}
+ggplot(data=trade_2, aes(x=year, y=Net_Import)) +
+  geom_bar(stat="identity", fill="steelblue")+
+  theme_minimal()
 ```
